--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,116 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+
+:root {
+    --main-color: rgb(107, 53, 255);
+    --secondary-color: rgb(127, 80, 255);
+    --margin: 20px;
+    --padding: 5px 20px 4px 20px;
+    --border: 2px solid var(--main-color);
+    --border-radius: 10px;
+    --button-height: 60px;
+
+    font-size: 60px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.top,
+.bottom {
+    font-family: 'Roboto', sans-serif;
+    height: 50vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.top {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.top h1 {
+    margin: 0;
+    font-size: 1rem;
+    font-style: italic;
+    font-weight: 700;
+    color: var(--main-color);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.top p {
+    margin: 0;
+    font-size: 0.4rem;
+    font-weight: 300;
+}
+
+form {
+    display: flex;
+    align-items: center;
+    margin: var(--margin) 0;
+}
+
+form input {
+    height: var(--button-height);
+    padding: var(--padding);
+    font-size: 0.4rem;
+    font-weight: 300;
+    font-style: italic;
+    border: 2px solid var(--main-color);
+    border-radius: var(--border-radius);
+    outline: none;
+}
+
+form button {
+    height: var(--button-height);
+    margin-left: var(--margin);
+    padding: var(--padding);
+    font-size: 0.3rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    border: none;
+    border-radius: var(--border-radius);
+    color: white;
+    background-color: var(--main-color);
+}
+
+form button:hover {
+    background-color: var(--secondary-color);
+}
+
+#weather {
+    margin: var(--margin) auto;
+    width: 400px;
+    text-align: left;
+    font-size: 0.4rem;
+    font-weight: 300;
+}
+
+#weather div {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: -40px;
+}
+
+#error {
+    font-weight: 700;
+    text-transform: uppercase;
+    color: red;
+}
+
+@media only screen and (max-width: 768px) {
+    form {
+        flex-direction: column;
+    }
+
+    form button {
+        width: 100%;
+        margin: var(--margin) 0;
+    }
+
+    #weather {
+        padding: var(--padding);
+        width: auto;
+    }
 }
